spotlight & reveal implementation

--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -372,6 +372,9 @@
                         <option value="showModal">Show Modal</option>
                         <option value="navigateToSlide">Navigate to Slide</option>
                         <option value="navigateToURL">Navigate to URL</option>
+                        <option value="spotlight">Spotlight</option>
+                        <option value="reveal">Reveal</option>
+                        <!-- <option value="panZoom">Pan/Zoom</option> --> <!-- Add later -->
                     </select>
 
                     <div id="modalContentConfig" class="config-section" style="display:none;">
