minor syntax issue

--- a/Client/Viewer/Viewer_JS.html
+++ b/Client/Viewer/Viewer_JS.html
@@ -18,7 +18,7 @@
       // State for Modal Sequencing (Step 21)
       currentModalOverlay: null, // The Fabric object that triggered the current modal sequence
       modalSequence: [],         // Array of Fabric objects in the current sequence on the slide
-      currentModalSequenceIndex: -1 // Index within modalSequence being displayed
+      currentModalSequenceIndex: -1, // Index within modalSequence being displayed
       isSpotlightActive: false, // NEW: Track if spotlight effect is on
       spotlightOriginalOpacities: new Map() // NEW: Store original opacities
     };
