changed spotlight approach

--- a/Client/Viewer/ViewerView.html
+++ b/Client/Viewer/ViewerView.html
@@ -43,6 +43,11 @@
       .view-project-button:hover {
         background-color: #2980b9;
       }
+      .fabric-spotlight-target-highlight {
+        /* Example: adds a subtle glow */
+        box-shadow: 0 0 15px 5px rgba(255, 255, 150, 0.9);
+        /* Fabric objects don't directly use box-shadow. You'd modify stroke instead. */
+      }
 
       #messageAreaViewer { margin-top: 15px; padding: 10px; border: 1px solid transparent; border-radius: 3px; min-height: 1.5em; }
       .success { border-color: green; background-color: #d4edda; color: #155724; } 
