added click and hold trigger

--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -364,6 +364,7 @@
                         <option value="">None</option>
                         <option value="click">On Click</option>
                         <option value="hover">On Hover</option>
+                        <option value="clickAndHold">Click and Hold</option> <!-- Step 23 -->
                     </select><br>
 
                     <label for="objInteractionAction">Action:</label>
